<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.topnews.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.settings.SettingsFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="56dp"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_search"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toStartOf="@+id/main_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView" />


                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_looks"
                    app:layout_constraintBottom_toBottomOf="@+id/other"
                    app:layout_constraintEnd_toStartOf="@+id/main_guideline"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/other" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/Settings.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:text="@string/search"
                    app:layout_constraintStart_toStartOf="@+id/main_guideline"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/other"
                    style="@style/Settings.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/other"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/main_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/text_change_country" />

                <TextView
                    android:id="@+id/text_change_categories"
                    style="@style/Settings.ActionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/change_news_categories"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/main_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/text_change_country"
                    style="@style/Settings.ActionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change_country"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/main_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/text_change_categories" />

                <TextView
                    android:id="@+id/text_privacy_policy"
                    style="@style/Settings.ActionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/main_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/other" />

                <TextView
                    android:id="@+id/text_clear_cache"
                    style="@style/Settings.ActionText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_cache"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/main_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/text_privacy_policy" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/main_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>