<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.topnews.ui.intro.IntroViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.intro.CountryFragment">

        <TextView
            android:id="@+id/textView2"
            style="@style/Intro.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/choose_your_country"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spinner_country"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/country"
            android:theme="@style/BaseText"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <AutoCompleteTextView
                android:id="@+id/dropdown_country"
                style="@style/BaseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hapticFeedbackEnabled="false"
                android:maxHeight="500dp"
                android:textColor="@color/colorPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/meaningless_pic"
            app:layout_constraintBottom_toTopOf="@+id/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_country"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/glosbe_anim" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            style="@style/BaseMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:enabledBy="@{viewmodel.countryType}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>