<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.intro.PrivacyFragment">

        <TextView
            android:id="@+id/textView2"
            style="@style/Intro.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/intro_set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_privacy_link"
            style="@style/Intro.Privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/intro_privacy"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/next"
            app:layout_constraintEnd_toEndOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@id/guideline5" />


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toTopOf="@+id/text_privacy_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/intro_anim" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            style="@style/BaseMaterialButton.Long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:text="@string/continue_"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>